--- a/docling_convert_pipeline_compiled.yaml
+++ b/docling_convert_pipeline_compiled.yaml
@@ -2,10 +2,14 @@
 # Name: data-processing-docling-pipeline
 # Description: Docling convert pipeline by the Data Processing Team
 # Inputs:
+#    image_export_mode: str [Default: 'embedded']
 #    num_splits: int [Default: 3.0]
+#    num_threads: int [Default: 4.0]
 #    pdf_backend: str [Default: 'dlparse_v4']
 #    pdf_base_url: str [Default: 'https://github.com/docling-project/docling/raw/v2.43.0/tests/data/pdf']
 #    pdf_filenames: str [Default: '2203.01017v2.pdf,2206.01062.pdf,2305.03393v1-pg9.pdf,2305.03393v1.pdf,amt_handbook_sample.pdf,code_and_formula.pdf,multi_page.pdf,redp5110_sampled.pdf']
+#    table_mode: str [Default: 'accurate']
+#    timeout_per_document: int [Default: 0.0]
 components:
   comp-create-pdf-splits:
     executorLabel: exec-create-pdf-splits
@@ -39,12 +43,30 @@ components:
             schemaVersion: 0.0.1
           description: Path to the input directory containing PDF files.
       parameters:
+        image_export_mode:
+          defaultValue: embedded
+          isOptional: true
+          parameterType: STRING
+        num_threads:
+          defaultValue: 4.0
+          isOptional: true
+          parameterType: NUMBER_INTEGER
         pdf_backend:
+          defaultValue: dlparse_v4
           description: Backend to use for PDF processing.
+          isOptional: true
           parameterType: STRING
         pdf_split:
           description: List of PDF file names to process.
           parameterType: LIST
+        table_mode:
+          defaultValue: accurate
+          isOptional: true
+          parameterType: STRING
+        timeout_per_document:
+          defaultValue: 0.0
+          isOptional: true
+          parameterType: NUMBER_INTEGER
     outputDefinitions:
       artifacts:
         output_path:
@@ -73,10 +95,18 @@ components:
               input_path:
                 componentInputArtifact: pipelinechannel--import-pdfs-output_path
             parameters:
+              image_export_mode:
+                componentInputParameter: pipelinechannel--image_export_mode
+              num_threads:
+                componentInputParameter: pipelinechannel--num_threads
               pdf_backend:
                 componentInputParameter: pipelinechannel--pdf_backend
               pdf_split:
                 componentInputParameter: pipelinechannel--create-pdf-splits-Output-loop-item
+              table_mode:
+                componentInputParameter: pipelinechannel--table_mode
+              timeout_per_document:
+                componentInputParameter: pipelinechannel--timeout_per_document
           taskInfo:
             name: docling-convert
     inputDefinitions:
@@ -94,8 +124,16 @@ components:
           parameterType: LIST
         pipelinechannel--create-pdf-splits-Output-loop-item:
           parameterType: LIST
+        pipelinechannel--image_export_mode:
+          parameterType: STRING
+        pipelinechannel--num_threads:
+          parameterType: NUMBER_INTEGER
         pipelinechannel--pdf_backend:
           parameterType: STRING
+        pipelinechannel--table_mode:
+          parameterType: STRING
+        pipelinechannel--timeout_per_document:
+          parameterType: NUMBER_INTEGER
   comp-import-pdfs:
     executorLabel: exec-import-pdfs
     inputDefinitions:
@@ -174,23 +212,28 @@ deploymentSpec:
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
           \ *\n\ndef docling_convert(\n    input_path: dsl.Input[dsl.Artifact],\n\
-          \    pdf_split: List[str],\n    pdf_backend: str,\n    artifacts_path: dsl.Input[dsl.Artifact],\n\
-          \    output_path: dsl.Output[dsl.Artifact],\n):\n    \"\"\"\n    Convert\
-          \ a list of PDF files to JSON and Markdown using Docling.\n\n    Args:\n\
-          \        input_path: Path to the input directory containing PDF files.\n\
-          \        pdf_split: List of PDF file names to process.\n        pdf_backend:\
-          \ Backend to use for PDF processing.\n        artifacts_path: Path to the\
-          \ directory containing Docling models.\n        output_path: Path to the\
-          \ output directory for JSON and Markdown files.\n    \"\"\"\n    import\
-          \ os\n    from importlib import import_module\n    from pathlib import Path\n\
-          \n    from docling_core.types.doc.base import ImageRefMode  # pylint: disable=import-outside-toplevel\
-          \  # noqa: PLC0415, E402\n    from docling.datamodel.base_models import\
-          \ InputFormat  # pylint: disable=import-outside-toplevel  # noqa: PLC0415,\
-          \ E402\n    from docling.datamodel.pipeline_options import (  # pylint:\
-          \ disable=import-outside-toplevel  # noqa: PLC0415, E402\n        PdfPipelineOptions,\n\
-          \        PdfBackend,\n        TableFormerMode,\n    )\n    from docling.document_converter\
-          \ import DocumentConverter, PdfFormatOption  # pylint: disable=import-outside-toplevel\
-          \  # noqa: PLC0415, E402\n\n    allowed_backends = {e.value for e in PdfBackend}\n\
+          \    artifacts_path: dsl.Input[dsl.Artifact],\n    output_path: dsl.Output[dsl.Artifact],\n\
+          \    pdf_split: List[str],\n    pdf_backend: str = \"dlparse_v4\",\n   \
+          \ image_export_mode: str = \"embedded\",\n    table_mode: str = \"accurate\"\
+          ,\n    num_threads: int = 4,\n    timeout_per_document: int = 0,\n):\n \
+          \   \"\"\"\n    Convert a list of PDF files to JSON and Markdown using Docling.\n\
+          \n    Args:\n        input_path: Path to the input directory containing\
+          \ PDF files.\n        pdf_split: List of PDF file names to process.\n  \
+          \      pdf_backend: Backend to use for PDF processing.\n        artifacts_path:\
+          \ Path to the directory containing Docling models.\n        output_path:\
+          \ Path to the output directory for JSON and Markdown files.\n    \"\"\"\n\
+          \    import os\n    from importlib import import_module\n    from pathlib\
+          \ import Path\n\n    from docling_core.types.doc.base import ImageRefMode\
+          \  # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n  \
+          \  from docling.datamodel.base_models import InputFormat  # pylint: disable=import-outside-toplevel\
+          \  # noqa: PLC0415, E402\n    from docling.datamodel.pipeline_options import\
+          \ (  # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n\
+          \        PdfPipelineOptions,\n        PdfBackend,\n        TableFormerMode,\n\
+          \    )\n    from docling.document_converter import DocumentConverter, PdfFormatOption\
+          \  # pylint: disable=import-outside-toplevel  # noqa: PLC0415, E402\n  \
+          \  from docling.datamodel.accelerator_options import AcceleratorDevice,\
+          \ AcceleratorOptions  # pylint: disable=import-outside-toplevel  # noqa:\
+          \ PLC0415, E402\n\n    allowed_backends = {e.value for e in PdfBackend}\n\
           \    if pdf_backend not in allowed_backends:\n        raise ValueError(\n\
           \            f\"Invalid pdf_backend: {pdf_backend}. Must be one of {sorted(allowed_backends)}\"\
           \n        )\n\n    input_path_p = Path(input_path.path)\n    artifacts_path_p\
@@ -201,12 +244,14 @@ deploymentSpec:
           \n    pipeline_options = PdfPipelineOptions()\n    pipeline_options.artifacts_path\
           \ = artifacts_path_p\n    pipeline_options.do_ocr = True\n    pipeline_options.do_table_structure\
           \ = True\n    pipeline_options.table_structure_options.do_cell_matching\
-          \ = True\n    pipeline_options.table_structure_options.mode = TableFormerMode.ACCURATE\n\
-          \    pipeline_options.generate_page_images = True\n\n    backend_to_impl\
-          \ = {\n        PdfBackend.PYPDFIUM2.value: (\n            \"docling.backend.pypdfium2_backend\"\
-          ,\n            \"PyPdfiumDocumentBackend\",\n        ),\n        PdfBackend.DLPARSE_V1.value:\
-          \ (\n            \"docling.backend.docling_parse_backend\",\n          \
-          \  \"DoclingParseDocumentBackend\",\n        ),\n        PdfBackend.DLPARSE_V2.value:\
+          \ = True\n    pipeline_options.generate_page_images = True\n    pipeline_options.table_structure_options.mode\
+          \ = TableFormerMode(table_mode)\n    pipeline_options.document_timeout =\
+          \ float(timeout_per_document)\n    pipeline_options.accelerator_options\
+          \ = AcceleratorOptions(\n        num_threads=num_threads, device=AcceleratorDevice.AUTO\n\
+          \    )\n\n    backend_to_impl = {\n        PdfBackend.PYPDFIUM2.value: (\n\
+          \            \"docling.backend.pypdfium2_backend\",\n            \"PyPdfiumDocumentBackend\"\
+          ,\n        ),\n        PdfBackend.DLPARSE_V1.value: (\n            \"docling.backend.docling_parse_backend\"\
+          ,\n            \"DoclingParseDocumentBackend\",\n        ),\n        PdfBackend.DLPARSE_V2.value:\
           \ (\n            \"docling.backend.docling_parse_v2_backend\",\n       \
           \     \"DoclingParseV2DocumentBackend\",\n        ),\n        PdfBackend.DLPARSE_V4.value:\
           \ (\n            \"docling.backend.docling_parse_v4_backend\",\n       \
@@ -221,10 +266,10 @@ deploymentSpec:
           \ raises_on_error=True)\n\n    for result in results:\n        doc_filename\
           \ = result.input.file.stem\n\n        output_json_path = output_path_p /\
           \ f\"{doc_filename}.json\"\n        print(f\"docling-convert: saving {output_json_path}\"\
-          , flush=True)\n        result.document.save_as_json(output_json_path, image_mode=ImageRefMode.PLACEHOLDER)\n\
+          , flush=True)\n        result.document.save_as_json(output_json_path, image_mode=ImageRefMode(image_export_mode))\n\
           \n        output_md_path = output_path_p / f\"{doc_filename}.md\"\n    \
           \    print(f\"docling-convert: saving {output_md_path}\", flush=True)\n\
-          \        result.document.save_as_markdown(output_md_path, image_mode=ImageRefMode.PLACEHOLDER)\n\
+          \        result.document.save_as_markdown(output_md_path, image_mode=ImageRefMode(image_export_mode))\n\
           \n    print(\"docling-convert: done\", flush=True)\n\n"
         image: quay.io/fabianofranz/docling:v2.43.0
         resources:
@@ -371,8 +416,16 @@ root:
               taskOutputParameter:
                 outputParameterKey: Output
                 producerTask: create-pdf-splits
+            pipelinechannel--image_export_mode:
+              componentInputParameter: image_export_mode
+            pipelinechannel--num_threads:
+              componentInputParameter: num_threads
             pipelinechannel--pdf_backend:
               componentInputParameter: pdf_backend
+            pipelinechannel--table_mode:
+              componentInputParameter: table_mode
+            pipelinechannel--timeout_per_document:
+              componentInputParameter: timeout_per_document
         parameterIterator:
           itemInput: pipelinechannel--create-pdf-splits-Output-loop-item
           items:
@@ -394,8 +447,16 @@ root:
           name: import-pdfs
   inputDefinitions:
     parameters:
+      image_export_mode:
+        defaultValue: embedded
+        isOptional: true
+        parameterType: STRING
       num_splits:
         defaultValue: 3.0
+        isOptional: true
+        parameterType: NUMBER_INTEGER
+      num_threads:
+        defaultValue: 4.0
         isOptional: true
         parameterType: NUMBER_INTEGER
       pdf_backend:
@@ -410,5 +471,13 @@ root:
         defaultValue: 2203.01017v2.pdf,2206.01062.pdf,2305.03393v1-pg9.pdf,2305.03393v1.pdf,amt_handbook_sample.pdf,code_and_formula.pdf,multi_page.pdf,redp5110_sampled.pdf
         isOptional: true
         parameterType: STRING
+      table_mode:
+        defaultValue: accurate
+        isOptional: true
+        parameterType: STRING
+      timeout_per_document:
+        defaultValue: 0.0
+        isOptional: true
+        parameterType: NUMBER_INTEGER
 schemaVersion: 2.1.0
 sdkVersion: kfp-2.14.2
